--- a/yahtzee-front/package.json
+++ b/yahtzee-front/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "socket.io-client": "^4.5.4",
+    "events": "^3.3.0",
+    "pouchdb-browser": "^8.0.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@rensatsu/blueberry-css": "^1.9.0",
+    "@types/pouchdb-browser": "^6.1.3",
     "@vitejs/plugin-vue": "^4.0.0",
+    "pinia": "^2.0.28",
     "sass": "^1.56.2",
     "vite": "^4.0.0"
   }
