--- a/yahtzee-back/package.json
+++ b/yahtzee-back/package.json
@@ -10,10 +10,12 @@
   "author": "Rensatsu",
   "license": "UNLICENSED",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "socket.io": "^4.5.4"
+    "express-pouchdb": "^4.2.0",
+    "pouchdb": "^8.0.0"
   },
   "devDependencies": {
     "jest": "^29.3.1"
