--- a/yahtzee-front/package.json
+++ b/yahtzee-front/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "wrangler:dev": "wrangler pages dev dist --port=7503 --compatibility-date=2022-12-20",
+    "wrangler:publish": "wrangler pages publish dist"
   },
   "dependencies": {
     "events": "^3.3.0",
@@ -19,6 +21,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "pinia": "^2.0.28",
     "sass": "^1.56.2",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "wrangler": "^2.6.2"
   }
 }
