--- a/yahtzee-front/package.json
+++ b/yahtzee-front/package.json
@@ -11,6 +11,10 @@
     "wrangler:publish": "npm run build && wrangler pages publish dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "events": "^3.3.0",
     "pouchdb-browser": "^8.0.0",
     "vue": "^3.2.45"
