Fix build command for production mode

--- a/yahtzee-front/package.json
+++ b/yahtzee-front/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "vite build --mode production",
     "preview": "vite preview",
     "wrangler:dev": "wrangler pages dev dist --port=7503 --compatibility-date=2022-12-20",
-    "wrangler:publish": "npm run build && wrangler pages publish dist"
+    "wrangler:publish": "npm run build:prod && wrangler pages publish dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
